--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "next": "16.1.5",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.6",
+    "posthog-js": "^1.336.4",
+    "posthog-node": "^5.24.7",
     "prisma": "^7.1.0",
     "react": "19.2.4",
     "react-day-picker": "^9.12.0",
